--- a/index.html
+++ b/index.html
@@ -9,13 +9,53 @@
 </head>
 <body>
     <div class="header-nav">
-        <div class="nav-options" style="width: 886px; height: 35px; display: flex; flex-direction: row; align-items: center; justify-content: flex-start;">
-            <p class="aboutme" style="font-size: 30px; font-weight: 700; line-height: 100%; color: white;">ABOUT ME</p>
-            <div style="width: 198px;"></div>
-            <p class="myworks" style="font-size: 30px; font-weight: 700; line-height: 100%; color: white;">MY WORKS</p>
-            <div style="width: 198px;"></div>
-            <p class="contactme" style="font-size: 30px; font-weight: 700; line-height: 100%; color: white;">CONTACT ME</p>
+        <div class="nav-options">
+            <p class="aboutme">ABOUT ME</p>
+            <div class="breaker" style="width: 200px;"></div>
+            <p class="myworks">MY WORKS</p>
+            <div class="breaker" style="width: 200px;"></div>
+            <p class="contactme">CONTACT ME</p>
         </div>
+    </div>
+
+    <div class="section-space"></div>
+
+    <img src="Images/quote-image.webp" alt="" class="life-quote">
+
+    <div class="section-space-2"></div>
+
+    <div class="aboutme-section">
+        <div class="aboutme-texts">
+            <div class="aboutme-title">KNOW MORE</div>
+            <div class="space-between"></div>
+            <p class="aboutme-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi cursus, sem sit amet cursus fermentum, mi orci fringilla sem, ac interdum odio tellus vestibulum massa. Nam ac lectus fringilla, viverra turpis a, dapibus nulla. Vestibulum blandit felis ligula, et bibendum odio euismod eget. Vivamus in dapibus dui. Ut in fringilla elit. Suspendisse potenti. Etiam placerat nulla tortor. Sed quis nisi nunc. Phasellus a lorem tellus. Donec vitae lacus nec felis commodo vulputate sit amet a lorem. Curabitur eleifend orci sit amet eleifend fermentum. Donec varius lectus eu enim pellentesque mollis. Aenean orci sapien, pharetra ac est a, ullamcorper interdum turpis. Aenean eleifend justo in lectus luctus commodo. Vivamus ut accumsan est, sed gravida velit. Mauris rhoncus, neque at laoreet semper, dolor ex porta sapien, sit amet pulvinar turpis nisi at urna.</p>
+        </div>
+        <div class="breaker-aboutme"></div>
+        <img src="Images/DP.png" alt="" class="display-pic">
+    </div>
+
+    <div class="section-space-2"></div>
+
+    <div class="contactme-section">
+        <p class="get-in-touch">Get in Touch</p>
+        <a class="gmail-profile" href="https://mail.google.com/mail/?view=cm&fs=1&to=kartikpadave.developer@gmail.com&bcc=padavekartik@gmail.com" target="_blank">
+            <img class="gmail-logo" src="Images/gmail-logo.png"/>
+        </a>
+        <a class="linkedin-profile" href="https://www.linkedin.com/in/kartikpadave/" target="_blank">
+            <img class="linkedin-logo" src="Images/linkedin-logo.png"/>
+        </a>
+        <a class="github-profile" href="https://github.com/CryptoLeo-3000" target="_blank">
+            <img class="github-logo" src="Images/github-logo.png"/>
+        </a>
+        <a class="hackerrank-profile" href="https://www.hackerrank.com/KartikPadave" target="_blank">
+            <img class="hackerrank-logo" src="Images/hackerrank-logo.png"/>
+        </a>
+        <a class="twitter-profile" href="https://twitter.com/ShinigamileoK" target="_blank">
+            <img class="twitter-logo" src="Images/twitter-logo.png"/>
+        </a>
+        <a class="linktree-profile" href="https://linktr.ee/ShinigamiLeo" target="_blank">
+            <img class="linktree-logo" src="Images/lintree-logo.png"/>
+        </a>
     </div>
 </body>
 </html>
