--- a/OtherPages/MyWorks/works.html
+++ b/OtherPages/MyWorks/works.html
@@ -8,6 +8,51 @@
     <title>Kartik Padave | Works</title>
 </head>
 <body>
-    
+    <div class="header-nav">
+        <div class="nav-options">
+            <a href="../../index.html" class="aboutme">ABOUT ME</a>
+            <div class="breaker" style="width: 200px;"></div>
+            <a href="" class="myworks">MY WORKS</a>
+            <div class="breaker" style="width: 200px;"></div>
+            <a href="#section-contactme" class="contactme">CONTACT ME</a>
+        </div>
+    </div>
+
+    <div class="section-space-2"></div>
+
+    <div class="section-myworks">
+        <p>MY WORKS</p>
+    </div>
+
+    <div class="work-series1">
+        <a href="../IndividualWorks/IIMUN-Work/iimun-work.html" target="_blank"><img class="IIMUN-logo cards" src="../../Images/IIMUN-logo.jpeg"/></a>
+    </div>
+
+    <div class="section-space-2"></div>
+
+    <div id="section-contactme" class="contactme-section">
+        <p class="get-in-touch">Get in Touch</p>
+        <a class="gmail-profile" href="https://mail.google.com/mail/?view=cm&fs=1&to=kartikpadave.developer@gmail.com&bcc=padavekartik@gmail.com" target="_blank">
+            <img class="gmail-logo" src="../../Images/gmail-logo.png"/>
+        </a>
+        <a class="linkedin-profile" href="https://www.linkedin.com/in/kartikpadave/" target="_blank">
+            <img class="linkedin-logo" src="../../Images/linkedin-logo.png"/>
+        </a>
+        <a class="github-profile" href="https://github.com/CryptoLeo-3000" target="_blank">
+            <img class="github-logo" src="../../Images/github-logo.png"/>
+        </a>
+        <a class="hackerrank-profile" href="https://www.hackerrank.com/KartikPadave" target="_blank">
+            <img class="hackerrank-logo" src="../../Images/hackerrank-logo.png"/>
+        </a>
+        <a class="twitter-profile" href="https://twitter.com/ShinigamileoK" target="_blank">
+            <img class="twitter-logo" src="../../Images/twitter-logo.png"/>
+        </a>
+        <a class="linktree-profile" href="https://linktr.ee/ShinigamiLeo" target="_blank">
+            <img class="linktree-logo" src="../../Images/lintree-logo.png"/>
+        </a>
+    </div>0
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="arrow up"></i></button>
+    <script src="../../backtotop.js"></script>
 </body>
 </html>
