--- a/index.html
+++ b/index.html
@@ -58,25 +58,7 @@
         </a>
     </div>
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
-    <script>
-        mybutton = document.getElementById("myBtn");
-
-        window.onscroll = function() {scrollFunction()};
-
-        function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-            mybutton.style.display = "block";
-        } else {
-            mybutton.style.display = "none";
-        }
-        }
-
-        function topFunction() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-        }
-    </script>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="arrow up"></i></button>
+    <script src="backtotop.js"></script>
 </body>
 </html>
