--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,700&family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Padauk:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Kartik Padave</title>
 </head>
 <body>
@@ -26,9 +34,18 @@
 
     <div id="section-aboutme" class="aboutme-section">
         <div class="aboutme-texts">
-            <div class="aboutme-title">KNOW MORE</div>
+            <div class="aboutme-title">Hello !</div>
             <div class="space-between"></div>
-            <p class="aboutme-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi cursus, sem sit amet cursus fermentum, mi orci fringilla sem, ac interdum odio tellus vestibulum massa. Nam ac lectus fringilla, viverra turpis a, dapibus nulla. Vestibulum blandit felis ligula, et bibendum odio euismod eget. Vivamus in dapibus dui. Ut in fringilla elit. Suspendisse potenti. Etiam placerat nulla tortor. Sed quis nisi nunc. Phasellus a lorem tellus. Donec vitae lacus nec felis commodo vulputate sit amet a lorem. Curabitur eleifend orci sit amet eleifend fermentum. Donec varius lectus eu enim pellentesque mollis. Aenean orci sapien, pharetra ac est a, ullamcorper interdum turpis. Aenean eleifend justo in lectus luctus commodo. Vivamus ut accumsan est, sed gravida velit. Mauris rhoncus, neque at laoreet semper, dolor ex porta sapien, sit amet pulvinar turpis nisi at urna.</p>
+            <p class="aboutme-content">
+                I'm Kartik Padave, currently pursuing B.Tech in Computer Science and an aspiring Data Scientist.
+                <br><br>
+                Since I was young, I have always enjoyed solving puzzles. So that's how I look at big data sets: to me, it is one big puzzle I want 
+                to solve. Finding patterns nobody else sees is a challenge to me.
+                <br><br>
+                On my website you can find my projects, most of them are links to a website or interactive visualization.
+                <br><br>
+                Have fun in browsing through the content and thank you for visiting!
+            </p>
         </div>
         <div class="breaker-aboutme"></div>
         <img src="Images/DP.png" alt="" class="display-pic">
@@ -58,7 +75,7 @@
         </a>
     </div>
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="arrow up"></i></button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up"></i></button>
     <script src="backtotop.js"></script>
 </body>
 </html>
