Work on version 2.0 of portfolio started

--- a/OtherPages/IndividualWorks/IIMUN-Work/iimun-work.html
+++ b/OtherPages/IndividualWorks/IIMUN-Work/iimun-work.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <p class="IIMUN-title">I.I.M.U.N.<br/>App Design</p>
-        <img class="IIMUN-logo" src="./../../../Images/IIMUN-logo2.png"/>
+        <img class="IIMUN-logo" src="images/IIMUN-logo2.png"/>
     </div>
 
     <div class="organization">
@@ -77,15 +77,15 @@
         <h1>Screenshots:</h1>
         <div class="slideshow-container">
             <div class="mySlides fade">
-              <img src="SS1.png" class="ss-images">
-              <img src="SS2.png" class="ss-images">
-              <img src="SS3.png" class="ss-images">
+              <img src="images/SS1.png" class="ss-images">
+              <img src="images/SS2.png" class="ss-images">
+              <img src="images/SS3.png" class="ss-images">
             </div>
 
             <div class="mySlides fade">
-              <img src="SS4.png" class="ss-images">
-              <img src="SS5.png" class="ss-images">
-              <img src="SS6.png" class="ss-images">
+              <img src="images/SS4.png" class="ss-images">
+              <img src="images/SS5.png" class="ss-images">
+              <img src="images/SS6.png" class="ss-images">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
