--- a/OtherPages/MyWorks/works.html
+++ b/OtherPages/MyWorks/works.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="work-series1">
-        <a href="../IndividualWorks/IIMUN-Work/iimun-work.html" target="_blank"><img class="IIMUN-logo cards" src="../../Images/IIMUN-logo.jpeg"/></a>
+        <a href="../IndividualWorks/IIMUN-Work/iimun-work.html" target="_blank"><img class="IIMUN-logo cards" src="images/IIMUN-logo.jpeg"/></a>
     </div>
 
     <div class="section-space-2"></div>
