Landing and About page ready

--- a/index.html
+++ b/index.html
@@ -7,75 +7,35 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,700&family=Lobster&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Padauk:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Kartik Padave</title>
+    <link href="https://fonts.googleapis.com/css2?family=Francois+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@700&display=swap" rel="stylesheet">
+    <title>Kartik Padave | Landing</title>
 </head>
 <body>
-    <div class="header-nav">
-        <div class="nav-options">
-            <a href="#section-aboutme" class="aboutme">ABOUT ME</a>
-            <div class="breaker" style="width: 200px;"></div>
-            <a href="OtherPages/MyWorks/works.html" class="myworks">MY WORKS</a>
-            <div class="breaker" style="width: 200px;"></div>
-            <a href="#section-contactme" class="contactme">CONTACT ME</a>
+    <div class="navbar">
+        <div class="Pagelinks">
+            <a href="OtherPages/AboutMe/aboutme.html" class="About">About</a>
+            <a href="OtherPages/MyWorks/works.html" class="Works">Works</a>
+            <a href="OtherPages/Blogs/blog.html" class="Blogs">Blogs</a>
+        </div>
+        <div class="Quicklinks">
+            <a href="https://twitter.com/ShinigamileoK" target="_blank"><img class="twitter-logo" src="Images/twitter-logo.png"/></a>
+            <a href="https://github.com/CryptoLeo-3000" target="_blank"><img class="github-logo" src="Images/github-logo.png"/></a>
+            <a href="https://www.linkedin.com/in/kartikpadave/" target="_blank"><img class="linkedin-logo" src="Images/linkedin-logo.png"/></a>
         </div>
     </div>
 
-    <div class="section-space"></div>
+    <div class="space-division"></div>
 
-    <img src="Images/quote-image.webp" alt="" class="life-quote">
-
-    <div class="section-space-2"></div>
-
-    <div id="section-aboutme" class="aboutme-section">
-        <div class="aboutme-texts">
-            <div class="aboutme-title">Hello !</div>
-            <div class="space-between"></div>
-            <p class="aboutme-content">
-                I'm Kartik Padave, currently pursuing B.Tech in Computer Science and an aspiring Data Scientist.
-                <br><br>
-                Since I was young, I have always enjoyed solving puzzles. So that's how I look at big data sets: to me, it is one big puzzle I want 
-                to solve. Finding patterns nobody else sees is a challenge to me.
-                <br><br>
-                On my website you can find my projects, most of them are links to a website or interactive visualization.
-                <br><br>
-                Have fun in browsing through the content and thank you for visiting!
-            </p>
-        </div>
-        <div class="breaker-aboutme"></div>
-        <img src="Images/DP.png" alt="" class="display-pic">
+    <div class="InspireQuote">
+        <p class="Saying">
+            “When something is important enough you do it even if the odds 
+            are not in your favour.”
+            <br/>
+            <br/>
+            Elon Musk
+        </p>
+        <img class="Elonmusk" src="Images/8376e6ba27bace067f9f62ed7aa92d9a.png"/>
     </div>
-
-    <div class="section-space-2"></div>
-
-    <div id="section-contactme" class="contactme-section">
-        <p class="get-in-touch">Get in Touch</p>
-        <a class="gmail-profile" href="https://mail.google.com/mail/?view=cm&fs=1&to=kartikpadave.developer@gmail.com&bcc=padavekartik@gmail.com" target="_blank">
-            <img class="gmail-logo" src="Images/gmail-logo.png"/>
-        </a>
-        <a class="linkedin-profile" href="https://www.linkedin.com/in/kartikpadave/" target="_blank">
-            <img class="linkedin-logo" src="Images/linkedin-logo.png"/>
-        </a>
-        <a class="github-profile" href="https://github.com/CryptoLeo-3000" target="_blank">
-            <img class="github-logo" src="Images/github-logo.png"/>
-        </a>
-        <a class="hackerrank-profile" href="https://www.hackerrank.com/KartikPadave" target="_blank">
-            <img class="hackerrank-logo" src="Images/hackerrank-logo.png"/>
-        </a>
-        <a class="twitter-profile" href="https://twitter.com/ShinigamileoK" target="_blank">
-            <img class="twitter-logo" src="Images/twitter-logo.png"/>
-        </a>
-        <a class="linktree-profile" href="https://linktr.ee/ShinigamiLeo" target="_blank">
-            <img class="linktree-logo" src="Images/lintree-logo.png"/>
-        </a>
-    </div>
-
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up"></i></button>
-    <script src="backtotop.js"></script>
 </body>
 </html>
