MyWorks page done

--- a/OtherPages/AboutMe/aboutme.html
+++ b/OtherPages/AboutMe/aboutme.html
@@ -14,9 +14,9 @@
 <body>
     <div class="navbar">
         <div class="Pagelinks">
-            <a href="OtherPages/AboutMe/aboutme.html" class="About">About</a>
-            <a href="OtherPages/MyWorks/works.html" class="Works">Works</a>
-            <a href="OtherPages/Blogs/blog.html" class="Blogs">Blogs</a>
+            <a href="../AboutMe/aboutme.html" class="About">About</a>
+            <a href="../MyWorks/works.html" class="Works">Works</a>
+            <a href="../Blogs/blog.html" class="Blogs">Blogs</a>
         </div>
         <div class="Quicklinks">
             <a href="https://twitter.com/ShinigamileoK" target="_blank"><img class="twitter-logo" src="../../Images/twitter-logo.png"/></a>
