--- a/OtherPages/MyWorks/works.html
+++ b/OtherPages/MyWorks/works.html
@@ -7,57 +7,30 @@
     <link rel="stylesheet" href="works.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,700&family=Lobster&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Francois+One&display=swap" rel="stylesheet">
     <title>Kartik Padave | Works</title>
 </head>
 <body>
-    <div class="header-nav">
-        <div class="nav-options">
-            <a href="../../index.html" class="aboutme">ABOUT ME</a>
-            <div class="breaker" style="width: 200px;"></div>
-            <a href="" class="myworks">MY WORKS</a>
-            <div class="breaker" style="width: 200px;"></div>
-            <a href="#section-contactme" class="contactme">CONTACT ME</a>
+    <div class="navbar">
+        <div class="Pagelinks">
+            <a href="../AboutMe/aboutme.html" class="About">About</a>
+            <a href="../MyWorks/works.html" class="Works">Works</a>
+            <a href="../Blogs/blog.html" class="Blogs">Blogs</a>
+        </div>
+        <div class="Quicklinks">
+            <a href="https://twitter.com/ShinigamileoK" target="_blank"><img class="twitter-logo" src="../../Images/twitter-logo.png"/></a>
+            <a href="https://github.com/CryptoLeo-3000" target="_blank"><img class="github-logo" src="../../Images/github-logo.png"/></a>
+            <a href="https://www.linkedin.com/in/kartikpadave/" target="_blank"><img class="linkedin-logo" src="../../Images/linkedin-logo.png"/></a>
         </div>
     </div>
 
-    <div class="section-space-2"></div>
+    <div class="space-division"></div>
 
-    <div class="section-myworks">
-        <p>MY WORKS</p>
+    <div class="worksrow">
+        <a href="../IndividualWorks/IIMUN-Work/iimun-work.html" target="_blank"><img class="IIMUN-work" src="images/IIMUN-logo.jpeg"/></a>
     </div>
 
-    <div class="work-series1">
-        <a href="../IndividualWorks/IIMUN-Work/iimun-work.html" target="_blank"><img class="IIMUN-logo cards" src="images/IIMUN-logo.jpeg"/></a>
-    </div>
-
-    <div class="section-space-2"></div>
-
-    <div id="section-contactme" class="contactme-section">
-        <p class="get-in-touch">Get in Touch</p>
-        <a class="gmail-profile" href="https://mail.google.com/mail/?view=cm&fs=1&to=kartikpadave.developer@gmail.com&bcc=padavekartik@gmail.com" target="_blank">
-            <img class="gmail-logo" src="../../Images/gmail-logo.png"/>
-        </a>
-        <a class="linkedin-profile" href="https://www.linkedin.com/in/kartikpadave/" target="_blank">
-            <img class="linkedin-logo" src="../../Images/linkedin-logo.png"/>
-        </a>
-        <a class="github-profile" href="https://github.com/CryptoLeo-3000" target="_blank">
-            <img class="github-logo" src="../../Images/github-logo.png"/>
-        </a>
-        <a class="hackerrank-profile" href="https://www.hackerrank.com/KartikPadave" target="_blank">
-            <img class="hackerrank-logo" src="../../Images/hackerrank-logo.png"/>
-        </a>
-        <a class="twitter-profile" href="https://twitter.com/ShinigamileoK" target="_blank">
-            <img class="twitter-logo" src="../../Images/twitter-logo.png"/>
-        </a>
-        <a class="linktree-profile" href="https://linktr.ee/ShinigamiLeo" target="_blank">
-            <img class="linktree-logo" src="../../Images/lintree-logo.png"/>
-        </a>
-    </div>0
-
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up"></i></button>
-    <script src="../../backtotop.js"></script>
+    <div class="space-division"></div>
 </body>
 </html>
