--- a/OtherPages/Blogs/blog.html
+++ b/OtherPages/Blogs/blog.html
@@ -27,7 +27,7 @@
 
     <div class="space-division"></div>
 
-    <div class="blogs" style="height: 2050px; display: inline-flex; flex-direction: column; align-items: center; justify-content: space-between;">
+    <!-- <div class="blogs" style="height: 2050px; display: inline-flex; flex-direction: column; align-items: center; justify-content: space-between;">
         <div class="blog" style="width: 1440px; padding-right: 100px; background-color: black; display: inline-flex; flex-direction: row; align-items: center; justify-content: space-between;">
             <div class="topic/desc" style="height: 120px; padding-left: 50px; padding-right: 50px; display: inline-flex; flex-direction: column; align-items: flex-start; justify-content: space-between;">
                 <p class="BlogTopic" style="font-size: 50px; font-weight: 700; line-height: 100%; color: white;">Blog Topic</p>
@@ -35,6 +35,12 @@
             </div>
             <div class="Rectangle10" style="width: 300px; height: 300px; background-color: rgba(253.94, 160.19, 160.19, 1);"/>
         </div>
-    </div>
+    </div> -->
+    
+    <img src="images/under development.jpg.png" alt="" class="under-development">
+
+    <p class="design-develop">
+        Page under development !!
+    </p>
 </body>
 </html>
