Contact links added

--- a/OtherPages/AboutMe/aboutme.html
+++ b/OtherPages/AboutMe/aboutme.html
@@ -55,12 +55,12 @@
     <div class="getintouch">
         <p class="contacttext">Get in Touch</p>
         <div class="contactlinks">
-            <img class="twitter-contact" src="../../Images/twitter-logo.png"/>
-            <img class="github-contact" src="../../Images/github-logo.png"/>
-            <img class="linkedin-contact" src="../../Images/linkedin-logo.png"/>
-            <img class="gmail-contact" src="../../Images/gmail-logo.png"/>
-            <img class="hackerrank-contact" src="../../Images/hackerrank-logo.png"/>
-            <img class="linktree-contact" src="../../Images/linktree-logo.png"/>
+            <a href="https://twitter.com/ShinigamileoK" target="_blank"><img class="twitter-contact" src="../../Images/twitter-logo.png"/></a>
+            <a href="https://github.com/CryptoLeo-3000" target="_blank"><img class="github-contact" src="../../Images/github-logo.png"/></a>
+            <a href="https://www.linkedin.com/in/kartikpadave/" target="_blank"><img class="linkedin-contact" src="../../Images/linkedin-logo.png"/></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kartikpadave.developer@gmail.com&bcc=padavekartik@gmail.com" target="_blank"><img class="gmail-contact" src="../../Images/gmail-logo.png"/></a>
+            <a href="https://www.hackerrank.com/KartikPadave" target="_blank"><img class="hackerrank-contact" src="../../Images/hackerrank-logo.png"/></a>
+            <a href="https://linktr.ee/ShinigamiLeo" target="_blank"><img class="linktree-contact" src="../../Images/linktree-logo.png"/></a>
         </div>
     </div>
 
