Updated works pages

--- a/OtherPages/MyWorks/works.html
+++ b/OtherPages/MyWorks/works.html
@@ -29,6 +29,8 @@
 
     <div class="worksrow">
         <a href="../IndividualWorks/IIMUN-Work/iimun-work.html" target="_blank"><img class="IIMUN-work" src="images/IIMUN-logo.jpeg"/></a>
+        <a href="../IndividualWorks/Jovian-DSA/jovian.html" target="_blank"><img class="IIMUN-work" src="images/Jovian-logo.jpg"/></a>
+        <a href="../IndividualWorks/Jovian-ZerotoPandas/jovian.html" target="_blank"><img class="IIMUN-work" src="images/Jovian-logo.jpg"/></a>
     </div>
 
     <div class="space-division"></div>
