Added unique colors to link

--- a/OtherPages/IndividualWorks/IIMUN-Work/iimun-work.html
+++ b/OtherPages/IndividualWorks/IIMUN-Work/iimun-work.html
@@ -97,7 +97,7 @@
             <p class="Prototypetext">
                 Link to view the app prototype in Figma:-
                 <br/>
-                <a href="https://bit.ly/3ErtkaN" class="Prototypetext" target="_blank">
+                <a href="https://bit.ly/3ErtkaN" class="Prototypetext Prototypelink" target="_blank">
                     https://bit.ly/3ErtkaN
                 </a>
             </p>
