--- a/OtherPages/MyWorks/works.html
+++ b/OtherPages/MyWorks/works.html
@@ -28,9 +28,22 @@
     <div class="space-division"></div>
 
     <div class="worksrow">
-        <a href="../IndividualWorks/IIMUN-Work/iimun-work.html" target="_blank"><img class="IIMUN-work" src="images/IIMUN-logo.jpeg"/></a>
-        <a href="../IndividualWorks/Jovian-DSA/jovian.html" target="_blank"><img class="IIMUN-work" src="images/Jovian-logo.jpg"/></a>
-        <a href="../IndividualWorks/Jovian-ZerotoPandas/jovian.html" target="_blank"><img class="IIMUN-work" src="images/Jovian-logo.jpg"/></a>
+        <div class="work-1 works">
+            <a href="../IndividualWorks/IIMUN-Work/iimun-work.html" target="_blank">
+                <img class="my-work" src="images/IIMUN-logo.jpeg"/>
+                <div id="overlay"></div>
+            </a>
+        </div>
+        <div class="work-2 works">
+            <a href="../IndividualWorks/Jovian-DSA/jovian.html" target="_blank">
+                <img class="my-work" src="images/Jovian-logo.jpg"/>
+            </a>
+        </div>
+        <div class="work-3 works">
+            <a href="../IndividualWorks/Jovian-ZerotoPandas/jovian.html" target="_blank">
+                <img class="my-work" src="images/Jovian-logo.jpg"/>
+            </a>
+        </div>
     </div>
 
     <div class="space-division"></div>
