New works added

--- a/OtherPages/MyWorks/works.html
+++ b/OtherPages/MyWorks/works.html
@@ -46,6 +46,25 @@
         </div>
     </div>
 
+    <div class="worksrow">
+        <div class="work-1 works">
+            <a href="../IndividualWorks/IAP/IAP.html" target="_blank">
+                <img class="my-work" src="images/nmims-logo.jpg"/>
+                <div id="overlay"></div>
+            </a>
+        </div>
+        <div class="work-2 works">
+            <a href="../IndividualWorks/DBMS/dbms.html" target="_blank">
+                <img class="my-work" src="images/nmims-logo.jpg"/>
+            </a>
+        </div>
+        <div class="work-3 works">
+            <a href="../IndividualWorks/CD/cd.html" target="_blank">
+                <img class="my-work" src="images/nmims-logo.jpg"/>
+            </a>
+        </div>
+    </div>
+
     <div class="space-division"></div>
 </body>
 </html>
